<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="todoAddPage"
            type="com.ozcanfatihcan.todosapp.ui.fragment.AddPageFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragment.AddPageFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/toolBar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/addPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAddPage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toDoName"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoDetail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/toDoDetail"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toDoTime"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonAddTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/buttonAdd"
            android:textColor="@color/backgroundColor"
            android:textSize="20dp"
            android:textStyle="bold"
            app:backgroundTint="@color/toolBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>