<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="todoDetailPage"
            type="com.ozcanfatihcan.todosapp.ui.fragment.DetailPageFragment" />
        <variable
            name="todoObject"
            type="com.ozcanfatihcan.todosapp.data.entity.Todos" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragment.DetailPageFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetailPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/toolBar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/detailPage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetailPage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoNameD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{todoObject.todo_name}"
                android:hint="@string/toDoName"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoDetailD"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@{todoObject.todo_detail}"
                android:hint="@string/toDoDetail"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/lightBlue"
            app:boxBackgroundColor="@color/lightPink"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/darkPink"
            app:boxStrokeWidth="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTodoTimeD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{todoObject.todo_time}"
                android:hint="@string/toDoTime"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonUpdateTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{()->todoDetailPage.buttonUpdate(todoObject.todo_id,textTodoNameD.getText().toString(),textTodoDetailD.getText().toString(),textTodoTimeD.getText().toString())}"
            android:text="@string/buttonUpdate"
            android:textColor="@color/darkPink"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/toolBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>